[package]
name = "aurorus"
version = "1.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
version-compare = "0.2.0"