[package]
name = "aurorus"
version = "1.3.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
version-compare = "0.2.0"
ring = "0.17.13"